# synthlearners

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci-tests.yaml
notebooks/: AbadieDiamondHainmueller2015.ipynb  demo.ipynb  panel_data_with_selection.ipynb
synthlearners/: knn_faiss.py  plotting.py  simulator.py  solvers.py  synth.py  utils.py
tests/: test_synths.py
